<resources>
    <string name="app_name">RickMorty</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="human">Human</string>
    <string name="alive">Alive</string>
    <string name="dot">.</string>
    <string name="your_favorite_list_is_empty">Your favorite list is empty</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
</resources>